--- a/style.css
+++ b/style.css
@@ -1,5 +1,21 @@
 h1{
-  color:red;
+  color:Black;
+  text-align: center;
+  font-size: 150px;
+}
+#horrorTitle{
+  color: #52527a;
+  text-align: center;
+  font-size: 100px;
+}
+#romanceTitle{
+  color: #ff0066;
+  text-align: center;
+  font-size: 100px;
+}
+body{
+  background-size:cover;
+  background-image: url("Images/scary clown.gif");
 }
 body {
     background-image: url("Images/this.gif");
