--- a/style.css
+++ b/style.css
@@ -1,22 +1,30 @@
-h1{
+.Title{
   color:Black;
   text-align: center;
   font-size: 150px;
+  font-family: 'Cabin Sketch', cursive;
 }
+
+
+
 #horrorTitle{
   color: #52527a;
-  text-align: center;
+  text-align: left;
   font-size: 100px;
+  font-family: 'Special Elite', cursive;
+
 }
 #romanceTitle{
   color: #ff0066;
-  text-align: center;
+  position: absolute;
+      right: 0px;
+      width: 300px;
   font-size: 100px;
+  font-family: 'Rufina', serif;
 }
-body{
-  background-size:cover;
-  background-image: url("Images/scary clown.gif");
-}
-body {
-    background-image: url("Images/this.gif");
+
+#Quote{
+  font-family: 'Tinos', serif;
+  color: #FFFBFC;
+  font-size: 40px;
 }
