--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -19,3 +19,9 @@ body {
       text-align: left;
       font-size: 50px;
     }
+
+    p{
+      color:white;
+      text-align: left;
+      font-size: 30px;
+    }
