--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -17,7 +17,8 @@ body {
     h2{
       color:white;
       text-align: left;
-      font-size: 20px;
+      font-size: 40px;
+      font-family: verdana;
     }
 
     p{
