--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -27,3 +27,10 @@ body {
       font-size: 30px;
       font-family: Verdana;
     }
+    div {
+        border: 1px solid black;
+        padding: 10px;
+        width: 200px;
+        height: 200px;
+        text-align: justify;
+    }
