--- a/aboutStyles.css
+++ b/aboutStyles.css
@@ -21,16 +21,13 @@ body {
       font-family: verdana;
     }
 
-    p{
-      color:white;
-      text-align: left;
-      font-size: 30px;
-      font-family: Verdana;
-    }
+
     div {
-        border: 1px solid black;
+        color: white;
+        border: 1px solid white;
         padding: 10px;
         width: 200px;
         height: 200px;
         text-align: justify;
+
     }
