--- a/romanceStyles.css
+++ b/romanceStyles.css
@@ -12,10 +12,19 @@ body {
       color:white;
       text-align: center;
       font-size: 150px;
-    }
+}
 
     h2{
       color:white;
       text-align: left;
       font-size: 50px;
-    }
+}
+
+    div {
+      color: white;
+    border: 1px solid white;
+    padding: 10px;
+    width: 200px;
+    height: 200px;
+    text-align: justify;
+}
