--- a/indexStyle.css
+++ b/indexStyle.css
@@ -23,13 +23,13 @@
 
 #horrorquote{
   font-family: 'Tinos', serif;
-  color: #820B8A;
+  color: #E1F4CB ;
   font-size: 40px;
 }
 
 #lovequote{
   font-family: 'Tinos', serif;
-  color: #820B8A;
+  color: #F397D6;
   font-size: 40px;
 }
 
