--- a/fearStyles.css
+++ b/fearStyles.css
@@ -4,10 +4,17 @@
   text-align: center;
   font-family: 'Cabin Sketch', cursive;
 }
+
 body{
   background-size:cover;
   background-image: url("Images/afraidDark.gif");
 }
-.explanation{
-  
+
+#explanation{
+  font-size: 40px;
+  color: white;
+  width: 800px;
+  text-align: center;
+  position: absolute;
+  right: 50;
 }
