--- a/romanceStyles.css
+++ b/romanceStyles.css
@@ -9,22 +9,48 @@ body {
     }
 
     h1{
-      color:white;
+      color:grey;
       text-align: center;
       font-size: 150px;
 }
 
     h2{
-      color:white;
-      text-align: left;
+      color:grey;
+      text-align: center;
       font-size: 50px;
+
+
+}ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
 }
 
-    div {
-      color: white;
-    border: 1px solid white;
-    padding: 10px;
-    width: 200px;
-    height: 200px;
-    text-align: justify;
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+li a:hover:not(.active) {
+    background-color: #111;
+}
+
+.active {
+    background-color: #4CAF50;
+}
+
+p{
+  color: white;
+  text-align: left;
+  padding: 12px ;
+  font-size: 30px;
 }
